# docs/swagger.json
@@ -9,6 +9,41 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/activate/{token}": {
+            "get": {
+                "description": "Activate user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Activate",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "activation token",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_transport_rest_v1.tokensResp"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/authenticate": {
             "get": {
                 "security": [
@@ -305,7 +340,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_rest_v1.tokensResp"
+                            "$ref": "#/definitions/internal_transport_rest_v1.userRegisterResp"
                         }
                     },
                     "default": {
@@ -438,6 +473,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_transport_rest_v1.userRegisterResp": {
+            "type": "object",
+            "properties": {
+                "activation_token": {
                     "type": "string"
                 }
             }
